Align event table info correctly

--- a/src/components/EventDetails.scss
+++ b/src/components/EventDetails.scss
@@ -32,7 +32,7 @@
 }
 .event-details__table {
   text-align: left;
-  margin: 50px 0 50px -115px;
+  margin: 50px 0 50px;
   @media screen and (min-width: 600px) {
     display: flex;
   }
@@ -68,14 +68,14 @@
   overflow: visible !important;
   width: 25px !important;
 }
-.event-details__info {
+.event-details__description p {
+  line-height: 1.3;
+}
+.event-details__map-wrapper {
   padding: 0 15%;
   @media screen and (max-width: 1000px) {
     padding: 0;
   }
-}
-.event-details__description p {
-  line-height: 1.3;
 }
 .event-details__map {
   position: relative;
